# SpudInference

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEV_LOG.md
src/: main.py
src/engine/: brain.py
src/tools/: clean_tensors.py  create_training.py  dataset_handling.py  train.py
