[package]
name = "spud_inference"
version = "0.1.0"
edition = "2021"

[lib]
name = "spud_inference"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# ML Framework
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }

# Parallelism
rayon = "1.8"
accelerate-src = { version = "0.3.0", optional = true } # For Intel/AMD optimizations

[features]
default = ["mkl"] # Use Intel MKL for Arch if installed
mkl = ["candle-core/mkl"]